--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             margin: 0 2.5% 20px;
             padding: 20px;
         }
+
+        .product.product--small .product__desc {
+            display: none;
+        }
         
         .product:nth-child(2n + 1) {
             clear: both;
@@ -77,30 +81,31 @@
     function displayProducts(products) {
       productsRoot.empty();
       products.forEach(product => {
-        const node = document.createElement('div');
-        const title = document.createElement('div');
-        const desc = document.createElement('div');
-        const more = document.createElement('div');
-        const img = document.createElement('img');
-        const price = document.createElement('div');
+        const node = $('<div />');
+        const title = $('<div />');
+        const desc = $('<div />');
+        const more = $('<div />');
+        const img = $('<img />');
+        const price = $('<div />');
 
-        node.className = 'product product--small';
-        title.innerHTML = product.title;
-        desc.innerHTML = product.desc;
-        more.innerHTML = 'Read more';
+        node.addClass('product product--small');
+        title.text(product.title);
+        desc.addClass('product__desc');
+        desc.text(product.desc);
+        more.text('Read more');
         more.click(function () {
           console.log('click more ');
-          node.className = 'product';
+          node.toggleClass('product--small');
         });
-        img.src = product.img;
-        price.innerHTML = product.price + ' EUR';
-        price.className = 'product__price';
+        img.attr('src', product.img);
+        price.text(product.price + ' EUR');
+        price.addClass('product__price');
 
-        node.appendChild(img);
-        node.appendChild(title);
-        node.appendChild(desc);
-        node.appendChild(more);
-        node.appendChild(price);
+        node.append(img);
+        node.append(title);
+        node.append(desc);
+        node.append(more);
+        node.append(price);
 
         productsRoot.append(node);
       });
