--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Node.js products listing</title>
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
